Git Tests/force-app/main/default/default/objects/ClassificacaoClienteProduto__mdt/ClassificacaoClienteProduto__mdt.object-meta.xml
<CustomObject>
    <description>Configuração para classificar a classe do cliente x classe do produto que pode ser comprado.</description>
    <label>Classificação Cliente x Produto</label>
    <pluralLabel>Classificações Clientes x Produtos</pluralLabel>
</CustomObject>