Git Tests/force-app/main/default/default/objects/ClassificacaoClienteProduto__mdt/fields/ClasseCliente__c.field-meta.xml
<CustomField>
    <fullName>ClasseCliente__c</fullName>
    <description>Código da classe referente a clientes</description>
    <label>Classe de cliente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>