Git Tests/force-app/main/default/default/objects/ClassificacaoClienteProduto__mdt/fields/ClasseClienteNome__c.field-meta.xml
<CustomField>
    <fullName>ClasseClienteNome__c</fullName>
    <label>Nome da classe de cliente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>