Git Tests/force-app/main/default/default/objects/ClassificacaoClienteProduto__mdt/fields/ClasseProduto__c.field-meta.xml
<CustomField>
    <fullName>ClasseProduto__c</fullName>
    <description>Código da classe referente a produtos</description>
    <label>Classe de produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>