Git Tests/force-app/main/default/default/objects/ClassificacaoClienteProduto__mdt/fields/ClasseProdutoNome__c.field-meta.xml
<CustomField>
    <fullName>ClasseProdutoNome__c</fullName>
    <label>Nome da classe de produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>